[project]
name = "langchain-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.7.0",
    "jupyter>=1.0.0",
    "jupytext>=1.18.1",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.4.0",
    "pydantic>=2.12.4",
]
